adding support for no game details, non-rated matches
